fix: make more readable

--- a/styles/includes/_locations.scss
+++ b/styles/includes/_locations.scss
@@ -165,7 +165,7 @@
 
 			span {
 				@include label-200();
-				@include spacing-200(margin-bottom);
+				@include spacing-400(margin-bottom);
 			}
 		}
 	}
